Fix api record filter and add api profile
