# app/Http/Controllers/Api/UserController.php
@@ -1,0 +1,45 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use Illuminate\Http\Request;
+use App\Services\UserService;
+use App\Http\Controllers\Controller;
+use App\Http\Resources\UserResource;
+
+class UserController extends Controller
+{
+
+    private $userService;
+
+    public function __construct(UserService $userService)
+    {
+        $this->userService = $userService;
+    }
+
+    /**
+     * Get profile user with tags
+     *
+     * @OA\Get(
+     *     path="/api/profile",
+     *     tags={"Column"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="profile",
+     *         @OA\JsonContent(ref="#/components/schemas/UserResource")
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad Request",
+     *     )
+     * )
+     * @return UserResource
+     */
+    public function profile()
+    {
+        $user = $this->userService->getProfile();
+
+        return new UserResource($user);
+    }
+}
