# routes/api.php
@@ -18,6 +18,7 @@ Route::name('login')->post('/login', 'Api\AuthController@login');
 Route::name('columns.index')->get('/columns', 'Api\ColumnController@index');
 
 Route::middleware('auth:api')->group(function () {
+    Route::name('user.profile')->get('/profile', 'Api\UserController@profile');
     Route::name('diaries.index')->get('/diaries', 'Api\DiaryController@index');
     Route::name('meals.index')->get('/meals', 'Api\MealController@index');
     Route::name('records.index')->get('/records', 'Api\RecordController@index');
